--- a/app/src/main/res/layout/fragment_top250.xml
+++ b/app/src/main/res/layout/fragment_top250.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <data>
-
-    </data>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <GridView
-        android:id="@+id/top250F_lv"
+        android:id="@+id/top250F_gv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:numColumns="3" />
-</layout>
+</RelativeLayout>
