--- a/app/src/main/res/layout/fragment_top250.xml
+++ b/app/src/main/res/layout/fragment_top250.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+
+        <variable
+            name="adapter"
+            type="com.ggx.myarchetecture.view.view.adapter.FilmAdapter" />
+    </data>
 
     <GridView
         android:id="@+id/top250F_gv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="3" />
-</RelativeLayout>
+        android:numColumns="3"
+        app:adapter="@{adapter}" />
+</layout>
